# BiTUI

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/bitui/: Application.hpp  Color.hpp  Renderer.hpp  ScreenBuffer.hpp  Style.hpp  Terminal.hpp  ansi.hpp  bitui.hpp  event.hpp  geometry.hpp
src/: Application.cpp  Renderer.cpp  ScreenBuffer.cpp  Terminal.cpp  ansi.cpp  main.cpp
src/terminal/: PosixTerminalBackend.cpp  TerminalBackend.hpp  Win32TerminalBackend.cpp  platform.cmake
